# talk-to-history-hpl-correspondence-transcriber

./: .markdownlintignore  .pre-commit-config.yaml  .pytest.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  entrypoint.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-cd.yaml  validate-semantic.pr.yaml
metadata/: .gitignore  418056.json
output/: .gitignore  929604.txt  929605.txt  929606.txt  929607.txt  929608.txt  929609.txt  929610.txt  929611.txt  929612.txt  929613.txt  929614.txt  929615.txt  929616.txt  929617.txt  929618.txt  929619.txt  929620.txt  929621.txt  929622.txt  929623.txt  929624.txt  929625.txt
reports/coverage/: coverage.xml
src/: example.py  helper.py  transcriber.py
tests/: test_example.py  test_helper_fetch_image_urls_from_manifest.py  test_helper_fetch_pids_from_metadata.py  test_helper_get_session.py  test_helper_main.py  test_helper_parse_manifest_for_image_urls.py  test_helper_process_batch_ocr.py  test_main_main.py  test_main_parse_arguments.py  test_transcriber_encode_image_to_base64.py  test_transcriber_extract_image_identifier_from_url.py  test_transcriber_fetch_image_from_url.py  test_transcriber_get_session.py  test_transcriber_main.py  test_transcriber_save_transcription_to_file.py  test_transcriber_transcribe_image_text.py
